fixing chrome bug with html overflow hidden

--- a/Tool/mtwstyles.css
+++ b/Tool/mtwstyles.css
@@ -26,6 +26,7 @@
 
 html {
 	margin: 0px 0px 0px 0px;
+	overflow: hidden;
 }
 
 body {
